<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/builder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/builder" />

    <Button
        android:id="@+id/observer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/observer" />

    <Button
        android:id="@+id/adapter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adapter" />

    <Button
        android:id="@+id/decorator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decorator" />

    <Button
        android:id="@+id/proxy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proxy" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

        <TextView
            android:id="@+id/pattern_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="test"
            android:textSize="24sp" />
    </ScrollView>

    <ImageView
        android:id="@+id/draw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>