<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/m1"
        android:title="search"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/m2"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        android:title="share"
        android:orderInCategory="0"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

</menu>
